# iot-py

./: controle_ventilacao.py  pyproject.toml
