[project]
name = "iot-py"
version = "0.1.0"
description = ""
authors = [
    {name = "eduard0vieira",email = "eduardohvieira05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt (>=2.1.0,<3.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
